--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "git": "0.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
